<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moradoApp"
    tools:context=".followMe">

    <ImageView
        android:id="@+id/brainFondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.2"
        android:background="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@mipmap/brainverde" />

    <ImageButton
        android:id="@+id/botonMainAtras"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/botonAtras"
        android:onClick="Regresar"
        app:layout_constraintBottom_toTopOf="@+id/botonJugarPicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428"
        app:srcCompat="@mipmap/botonback"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/botonJugarPicture"
        android:layout_width="354dp"
        android:layout_height="85dp"
        android:backgroundTint="@color/amarilloApp"
        android:backgroundTintMode="add"
        android:fontFamily="@font/pacifico"
        android:includeFontPadding="false"
        android:onClick="IngresoJuegoFollowMe"
        android:text="@string/botonJugar"
        android:textColor="@color/rosaApp"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloPicture"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="412dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/botonVideoguiaPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdementaApp"
            android:baselineAligned="false"
            android:fontFamily="@font/pacifico"
            android:text="@string/botonVideo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/botonInstruccionesPicture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/botonInstruccionesPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdementaApp"
            android:fontFamily="@font/pacifico"
            android:text="@string/botonInstrucciones"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/botonVideoguiaPicture"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tituloPicture"
        android:layout_width="286dp"
        android:layout_height="94dp"
        android:fontFamily="@font/pacifico"
        android:text="FollowMe"
        android:textAlignment="center"
        android:textColor="@color/verdementaApp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toEndOf="@+id/botonMainAtras"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="367dp"
        android:layout_height="97dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonJugarPicture"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/maximaPuntuacionPicture"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="Puntuación máxima: 0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/ultimaPuntuacionPicture"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Última puntuación: 0"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>