<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8892F7"
    tools:context=".picture.pictureGameScreen">

    <Button
        android:id="@+id/botonReinicioPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verdementaApp"
        android:fontFamily="@font/pacifico"
        android:text="@string/reiniciar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonA2"
        app:layout_constraintVertical_bias="0.058" />

    <ImageButton
        android:id="@+id/botonJuegoAtras"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/moradoApp"
        android:contentDescription="@string/botonAtras"
        android:onClick="RegresoPicture"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/backverde"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tiempoJuego"
        android:layout_width="67dp"
        android:layout_height="33dp"
        android:text="60"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/tituloPicture"
        android:layout_width="221dp"
        android:layout_height="110dp"
        android:fontFamily="@font/pacifico"
        android:text="Picture"
        android:textColor="@color/verdementaApp"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/PuntuacionPicture"
        android:layout_width="370dp"
        android:layout_height="61dp"
        android:fontFamily="@font/pacifico"
        android:text="Puntuación: 0"
        android:textAlignment="center"
        android:textColor="@color/verdementaApp"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/gameTime"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:text="Tiempo restante:"
        android:textAlignment="center"
        android:textColor="#F1EDED"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen3"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/botonVideoguia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verdementaApp"
        android:baselineAligned="false"
        android:fontFamily="@font/pacifico"
        android:text="@string/botonVideo"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/botonInstruccionesPicture2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/botonInstruccionesPicture2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verdementaApp"
        android:fontFamily="@font/pacifico"
        android:text="@string/botonInstrucciones"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonVideoguia"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageButton
        android:id="@+id/imageButtonP1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="@dimen/Remind"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/imageButtonP2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/imageButtonP3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen1"
        app:layout_constraintVertical_bias="0.15"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/imageButtonP4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen2"
        app:layout_constraintVertical_bias="0.148"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="invisible" />

    <ImageButton
        android:id="@+id/imageButtonA1"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"
        tools:srcCompat="@drawable/googlepay_button_overlay" />

    <ImageButton
        android:id="@+id/imageButtonA2"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822"
        tools:srcCompat="@drawable/googlepay_button_overlay" />

    <ImageButton
        android:id="@+id/imageButtonA3"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823"
        tools:srcCompat="@drawable/googlepay_button_overlay" />

    <ImageButton
        android:id="@+id/imageButtonA4"
        android:layout_width="79dp"
        android:layout_height="78dp"
        android:background="#4E718E"
        android:clickable="false"
        android:scaleType="fitStart"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"
        tools:srcCompat="@drawable/googlepay_button_overlay" />

    <ImageView
        android:id="@+id/imagen3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="#4E718E"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen1"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/googlepay_button_overlay"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imagen4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="#4E718E"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen2"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@drawable/googlepay_button_overlay"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imagen1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:background="#4E718E"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/googlepay_button_overlay"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imagen2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="40dp"
        android:background="#4E718E"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        app:srcCompat="@drawable/googlepay_button_overlay"
        tools:srcCompat="@drawable/googlepay_button_overlay"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>